Update offering section in index.html
Replaced the old section with a new offering section featuring updated content and images.

--- a/index.html
+++ b/index.html
@@ -158,14 +158,17 @@
             </div>
         </section>
 
-        <section class="section-padding tee-room-section reveal">
-            <div class="container">
-                <h3>The Content</h3>
-                <h2 style="font-size: 1.8rem;">Daily permission for women who are ready to stop negotiating with the life they want.</h2>
-                <p style="margin: 0 auto 2rem auto;">Enter the Tee Elite Room where accomplished women get permission to play their own game.</p>
-                <a href="https://tmacmastermind.com/tee-room.html" class="btn">Read the Latest</a>
-            </div>
-        </section>
+        <section class="offering-row reveal">
+    <div class="image-wrapper">
+        <img src="tee-room-hero.png" alt="TMac in the Tee Room" loading="lazy">
+    </div>
+    <div class="content-wrapper">
+        <h3>The Content</h3>
+        <h2>The Tee Room</h2>
+        <p>Daily permission for women who are ready to stop negotiating with the life they want. Enter the room where accomplished women play their own game.</p>
+        <a href="https://tmacmastermind.com/tee-room.html" class="btn">Read the Latest</a>
+    </div>
+</section>
 
         <section class="offering-row reveal">
             <div class="image-wrapper horizontal">
