--- a/life-partner.html
+++ b/life-partner.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Where Is My Life Partner: The Manifestation Edition. Explore the alignment required to attract the partnership and the lifestyle that belongs to you. Stop negotiating with the life you want.">
     <title>Where Is My Life Partner? - The Manifestation Edition</title>
     <link rel="icon" type="image/png" href="/tmac-logo.png">
     <link rel="apple-touch-icon" href="/tmac-logo.png">
