Update book description and call-to-action link

--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
             <div class="content-wrapper">
                 <h3>The Philosophy</h3>
                 <h2>Where Is My Life Partner?</h2>
-                <p>The Manifestation Edition. A guide not just to love, but to the alignment required to attract everything that belongs to you.</p>
-                <a href="https://book.tmacinspired.com" class="btn">Get the Book</a>
+                <p>The Manifestation Edition is coming to your bookshelf. Pre-order the limited hardcover edition and align yourself with the partnership you deserve.</p>
+                <a href="https://book.tmacinspired.com" class="btn">Join the Pre-Order List</a>
             </div>
         </section>
 
