--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <h3>The Philosophy</h3>
                 <h2>Where Is My Life Partner?</h2>
                 <p>The Manifestation Edition is coming to your bookshelf. Pre-order the limited hardcover edition and align yourself with the partnership you deserve.</p>
-                <a href="https://book.tmacinspired.com" class="btn">Join the Pre-Order List</a>
+                <a href="https://book.tmacinspired.com/life-partner.html" class="btn">Join the Pre-Order List</a>
             </div>
         </section>
 
