Update reservation message in life-partner.html

--- a/life-partner.html
+++ b/life-partner.html
@@ -313,7 +313,7 @@
                     <button type="submit" class="cta-button" id="submit-btn">Reserve My Copy Today</button>
                 </form>
                 <div id="form-message">
-                    Your place is reserved. Check your inbox for your invitation.
+                    Your book is reserved. Check your inbox.
                 </div>
             </div>
         </div>
