--- a/life-partner.html
+++ b/life-partner.html
@@ -392,26 +392,24 @@
         });
 
         async function getGeminiInsight(perm) {
-            const systemPrompt = `You are TMac, a supportive, real-talk mentor for successful women.
-            Tone: Conversational, warm, direct, grounded. No "frequencies," "matrices," or emojis.
-            Task: Give a short, encouraging permission grant for the theme: ${perm}.
-            Response: 1-2 sentences of real-talk insight followed by a simple "I give myself permission to..." statement. Do not use any emojis in the response.`;
-
-            const payload = {
-                contents: [{ parts: [{ text: `Give me a permission grant for: ${perm}` }] }],
-                systemInstruction: { parts: [{ text: systemPrompt }] }
-            };
-
-            try {
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${apiKey}`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(payload)
-                });
-                const result = await response.json();
-                return result.candidates?.[0]?.content?.parts?.[0]?.text || "Something went wrong. Let's try that again.";
-            } catch (e) { return "Connection issues. Give it one more shot."; }
+    try {
+        const response = await fetch('/api/generate', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ permission: perm })
+        });
+        
+        const result = await response.json();
+        
+        if (result.error) {
+            return "I'm having a moment of reflection. Please try again.";
         }
+
+        return result.text;
+    } catch (e) { 
+        return "Connection issues. Give it one more shot."; 
+    }
+}
 
         genBtn.addEventListener('click', async () => {
             genBtn.disabled = true;
