--- a/life-partner.html
+++ b/life-partner.html
@@ -22,7 +22,23 @@
         .hero-image img { max-width: 100%; height: auto; box-shadow: 0 20px 60px rgba(0,0,0,0.2); border-radius: 8px; }
         .hero-content h2 { font-size: 2.5em; color: #1f4236; margin-bottom: 30px; line-height: 1.3; }
         .hero-content p { font-size: 1.2em; margin-bottom: 20px; color: #555; }
-
+        
+        /* Early CTA Button Styling */
+        .hero-cta { 
+            display: inline-block; 
+            margin-top: 20px; 
+            background: #c9a961; 
+            color: white; 
+            padding: 15px 35px; 
+            border-radius: 50px; 
+            text-decoration: none; 
+            font-weight: bold; 
+            text-transform: uppercase; 
+            letter-spacing: 1px;
+            font-size: 0.9em;
+            transition: transform 0.3s ease;
+        }
+        .hero-cta:hover { transform: translateY(-2px); background: #b08e40; }
         .questions-section { background: #f8f4f0; padding: 80px 20px; }
         .questions-section h2 { font-size: 2.3em; color: #1f4236; text-align: center; margin-bottom: 50px; }
         .question-list { max-width: 800px; margin: 0 auto; }
