Update email input placeholder in form

--- a/life-partner.html
+++ b/life-partner.html
@@ -243,7 +243,7 @@
                         <input type="text" name="firstName" class="form-input" placeholder="First Name" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" name="email" class="form-input" placeholder="Professional Email" required>
+                        <input type="email" name="email" class="form-input" placeholder="Email" required>
                     </div>
                     <button type="submit" class="cta-button" id="submit-btn">Reserve My Copy Today</button>
                 </form>
