Add early CTA for Hardcover Manifestation Edition
Restored and styled early call-to-action for the Hardcover Manifestation Edition.

--- a/life-partner.html
+++ b/life-partner.html
@@ -137,6 +137,8 @@
             <p>You are a leader, a visionary, and a woman of profound faith. You've built a life that looks complete on paper, yet there is a specific void that accolades haven't been able to fill.</p>
             <p>You are the "Strong One," the "Boss," and the problem solver for everyone in your circle, but you are ready to be the woman who is cherished and supported in her own home.</p>
             <p><strong>The Hardcover Manifestation Edition is arriving soon.</strong></p>
+            <!-- Early CTA Restored and Styled -->
+            <a href="#waitlist-form" class="hero-cta">Reserve My Copy</a>
         </div>
     </section>
 
