Enhance readability and layout in slay-your-shift.html
Adjusted styles for improved readability and layout.

--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -16,6 +16,7 @@
             --text-light: #5c6b64;
             --font: Georgia, serif;
             --transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            --max-w: 1100px;
         }
 
         * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -25,9 +26,16 @@
             font-family: var(--font); 
             background: var(--bg); 
             color: var(--text); 
-            line-height: 1.6; 
+            line-height: 1.8; /* Increased line height for better readability */
             overflow-x: hidden;
         }
+
+        /* --- HEADER: Breathing Room (Matched to Index) --- */
+        .header-nav {
+            padding: 5rem 0 3rem; /* Significant top padding for breathing room */
+            text-align: center;
+        }
+
 
         /* 1. GREEN BANNER */
         .header-banner {
@@ -43,26 +51,36 @@
             width: auto; 
         }
 
-        /* 2. HERO AREA */
+        /* --- HERO: Spacious Layout --- */
         .hero {
-            padding: 5rem 1rem 4rem 1rem;
+            padding: 4rem 1.5rem 8rem; /* Wide vertical spacing */
             text-align: center;
+            max-width: var(--max-w);
+            margin: 0 auto;
         }
-        h1 { 
-            font-size: clamp(2.5rem, 5vw, 3.8rem); 
-            font-weight: 400; 
-            margin: 0 auto; 
-            line-height: 1.1; 
+
+        .hero h2 {
+            font-size: 1rem;
+            letter-spacing: 0.5em; /* Elegant spacing */
             text-transform: uppercase;
-            max-width: 950px;
-            letter-spacing: -0.01em;
-        }
-        .hero-sub {
-            font-style: italic;
             color: var(--gold);
-            font-size: 1.6rem;
-            margin-top: 15px;
-            margin-bottom: 10px;
+            margin-bottom: 2.5rem; /* Space below tag */
+            font-weight: 300;
+        }
+
+        .hero h1 {
+            font-size: clamp(2.8rem, 8vw, 4.8rem);
+            line-height: 1.1;
+            margin-bottom: 2.5rem; /* Space below title */
+            font-weight: normal;
+        }
+
+        .hero p {
+            font-size: 1.35rem;
+            color: var(--text-light);
+            max-width: 750px;
+            margin: 0 auto 5rem; /* Large space before the timer */
+            font-style: italic;
         }
 
         /* 3. PHOTO SECTION WITH BREATHING ROOM */
