Refactor header and enhance hero section
Updated header structure and added new hero section with description.

--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -327,16 +327,16 @@
 </head>
 <body>
 
-    <div class="header-banner">
+    <header class="header-nav">
         <a href="index.html">
-            <img src="tmac-logo.png" alt="TMac Inspired Logo" class="logo">
+            <img src="tmac-logo.png" alt="TMac Inspired Logo" class="logo-main">
         </a>
-    </div>
-
-    <header class="hero container">
-        <div class="hero-sub">The 5-Day Experience</div>
-        <h1>Slay Your Shift:<br>From Bedside to Business</h1>
     </header>
+
+    <section class="hero">
+        <h2>A 5-Day Masterclass Experience</h2>
+        <h1>Slay Your Shift</h1>
+        <p>For the nurse ready to pivot from the bedside to the boardroom. Build your legacy, not just your schedule.</p>
 
     <div class="hero-image-wrap">
         <div class="wide-image-container">
