Update hero image source in slay-your-shift.html

--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -342,7 +342,7 @@
 
     <div class="hero-image-wrap">
         <div class="wide-image-container">
-            <img src="from-bedside-to-business.png" alt="TMac Leading Nurses">
+            <img src="tmac-stage-pink.png" alt="TMac Leading Nurses">
         </div>
     </div>
 
