Update Apps Script URL in nurse-pivot.html

--- a/nurse-pivot.html
+++ b/nurse-pivot.html
@@ -113,8 +113,8 @@
                 };
                 
                 try {
-                    // REPLACE THIS URL WITH YOUR APPS SCRIPT WEB APP URL
-                    const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwSDIrdRg0f12yIiQDQhYD-2aEbLbitaO4tKKBn9JOgeo7mWmJAmp2O6gVQGt1Tnqb0HQ/exec';
+                    // Apps Script Web App URL
+                    const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyQXLWG-kzKBLa7KLg7_L5k14XfGM497n415ONuS3u8txmdLs88eyL6s9cD2AC156CyCg/exec';
                     
                     const response = await fetch(APPS_SCRIPT_URL, {
                         method: 'POST',
