Add 'Join the Shift' button to slay-your-shift.html
Added a call-to-action button for joining the shift in multiple sections of the HTML file.

--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -402,6 +402,10 @@
         <h1>Slay Your Shift</h1>
         <p>For the nurse ready to pivot from the bedside to the boardroom. Build your legacy, not just your schedule.</p>
 
+        <a href="https://buy.stripe.com/fZu28qbkkgId89e48G1sQ0i" class="btn" target="_blank" rel="noopener">
+  Join the Shift
+</a>
+
     <div class="hero-image-wrap">
         <div class="wide-image-container">
             <img src="tmac-stage-pink.png" alt="TMac Leading Nurses">
@@ -497,6 +501,10 @@
     </div>
 </section>
 
+        <a href="https://buy.stripe.com/fZu28qbkkgId89e48G1sQ0i" class="btn" target="_blank" rel="noopener">
+  Join the Shift
+</a>
+
     <section class="container">
         <h2 class="section-title">Frequently Asked Questions</h2>
         
@@ -556,7 +564,10 @@
         <div class="offer-box">
             <p class="price-label">Your Investment Today</p>
             <div class="price">$147</div>
-            <a href="#" class="btn">Join the Shift</a>
+            <a href="https://buy.stripe.com/fZu28qbkkgId89e48G1sQ0i" class="btn" target="_blank" rel="noopener">
+  Join the Shift
+</a>
+
         </div>
     </section>
 
