Revamp button styles and enhance mobile layout
Updated button styles to a premium design and adjusted media queries for better mobile responsiveness.

--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -294,20 +294,30 @@
         }
         .price-label { text-transform: uppercase; letter-spacing: 4px; font-size: 0.9rem; color: var(--gold); }
         .price { font-size: 5rem; margin: 15px 0; color: white; line-height: 1; }
-        .btn {
-            background: var(--gold);
-            color: var(--pine);
-            padding: 24px 70px;
-            text-decoration: none;
-            display: inline-block;
-            text-transform: uppercase;
-            letter-spacing: 4px;
-            font-size: 1rem;
-            font-weight: bold;
-            margin-top: 30px;
-            transition: transform 0.3s ease;
-        }
-        .btn:hover { transform: translateY(-3px); }
+        /* Unified CTA Button – Premium Style */
+.btn {
+    display: inline-block;
+    margin-top: 30px;
+    background: linear-gradient(135deg, #c9a961 0%, #f4e4b8 50%, #c9a961 100%);
+    color: #1f4236;
+    padding: 18px 45px;
+    border-radius: 50px;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 1em;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 15px rgba(201, 169, 97, 0.4);
+    border: none;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 6px 20px rgba(201, 169, 97, 0.6);
+    filter: brightness(1.05);
+}
+
 
         footer {
             text-align: center;
@@ -327,66 +337,71 @@
         }
 
         /* Mobile optimization only (desktop unchanged) */
-        @media (max-width: 600px) {
-            body { line-height: 1.65; }
+@media (max-width: 600px) {
+  body { line-height: 1.65; }
 
-            .header-nav { padding: 2.25rem 0 1.25rem; }
-            .logo-main { height: 70px; }
+  .header-nav { padding: 2.25rem 0 1.25rem; }
+  .logo-main { height: 70px; }
 
-            .hero { padding: 1.25rem 1rem 4.5rem; }
-            .hero h2 { letter-spacing: 0.35em; margin-bottom: 1.5rem; }
-            .hero h1 { font-size: clamp(2.1rem, 9.5vw, 3.2rem); margin-bottom: 1.25rem; }
-            .hero p { font-size: 1.1rem; margin: 0 auto 2.5rem; }
+  .hero { padding: 1.25rem 1rem 4.5rem; }
+  .hero h2 { letter-spacing: 0.35em; margin-bottom: 1.5rem; }
+  .hero h1 { font-size: clamp(2.1rem, 9.5vw, 3.2rem); margin-bottom: 1.25rem; }
+  .hero p { font-size: 1.1rem; margin: 0 auto 2.5rem; }
 
-            /* Ensure hero image scales cleanly on phones */
-            .hero-image-wrap { padding: 0 0 28px 0; }
-            .wide-image-container { height: auto; }
-            .wide-image-container img {
-                width: 100%;
-                height: auto;
-                display: block;
-            }
+  /* Ensure hero image scales cleanly on phones */
+  .hero-image-wrap { padding: 0 0 28px 0; }
+  .wide-image-container { height: auto; }
+  .wide-image-container img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
 
-            .date-strip { padding: 32px 0; }
-            .date-info { font-size: 0.85rem; letter-spacing: 3px; margin-bottom: 18px; }
+  .date-strip { padding: 32px 0; }
+  .date-info { font-size: 0.85rem; letter-spacing: 3px; margin-bottom: 18px; }
 
-            .timer-container {
-                gap: 14px;
-                flex-wrap: wrap;
-                justify-content: center;
-            }
-            .timer-number { font-size: 1.7rem; }
-            .timer-label { letter-spacing: 1.5px; }
+  .timer-container {
+    gap: 14px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .timer-number { font-size: 1.7rem; }
+  .timer-label { letter-spacing: 1.5px; }
 
-            .container { padding: 0 18px; }
-            .section-title { font-size: 0.95rem; letter-spacing: 4px; margin-bottom: 2.5rem; }
+  .container { padding: 0 18px; }
+  .section-title { font-size: 0.95rem; letter-spacing: 4px; margin-bottom: 2.5rem; }
 
-            .avatar-section { padding: 4.5rem 0; margin-bottom: 3.5rem; }
-            .avatar-grid { grid-template-columns: 1fr; gap: 28px; }
-            .avatar-box { padding-left: 18px; }
-            .avatar-box p { font-size: 1.05rem; }
+  .avatar-section { padding: 4.5rem 0; margin-bottom: 3.5rem; }
+  .avatar-grid { grid-template-columns: 1fr; gap: 28px; }
+  .avatar-box { padding-left: 18px; }
+  .avatar-box p { font-size: 1.05rem; }
 
-            .day-title { font-size: 1.6rem; }
+  .day-title { font-size: 1.6rem; }
 
-            .accordion-header { font-size: 1.05rem; padding: 18px 0; }
-            .accordion-content p { font-size: 1.05rem; }
+  .accordion-header { font-size: 1.05rem; padding: 18px 0; }
+  .accordion-content p { font-size: 1.05rem; }
 
-            .included-list li {
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 6px;
-            }
+  .included-list li {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 6px;
+  }
 
-            .offer-box { padding: 3.25rem 1.25rem; margin: 4.5rem 0; }
-            .price { font-size: 3.6rem; }
-            .btn {
-                width: 100%;
-                max-width: 360px;
-                padding: 18px 0;
-            }
+  .offer-box { padding: 3.25rem 1.25rem; margin: 4.5rem 0; }
+  .price { font-size: 3.6rem; }
 
-            footer { padding: 4rem 0; }
-        }
+  .btn {
+    width: auto;
+    max-width: 92%;
+    padding: 14px 22px;
+    letter-spacing: 1.5px;
+    font-size: 0.95em;
+    text-align: center;
+  }
+
+  footer { padding: 4rem 0; }
+}
+
     </style>
 </head>
 <body>
@@ -414,7 +429,7 @@
 
     <div class="date-strip">
         <div class="container">
-            <div class="date-info">February 23-27, 2026 | 7:00 PM EST</div>
+            <div class="date-info">February 23-27, 2026 | 8:30 PM EST</div>
             
             <div class="timer-container">
                 <div class="timer-segment">
