Refactor styles for hero subtitle and footer
Updated styles for hero subtitle and footer in about.html.

--- a/about.html
+++ b/about.html
@@ -86,7 +86,8 @@
             font-size: 1.2rem;
             color: var(--gold);
             font-style: italic;
-            margin-bottom: 3rem;
+            margin: 0 auto 3rem auto;
+            max-width: 100%;
         }
 
         /* --- PHOTO SECTION --- */
@@ -192,6 +193,10 @@
             font-size: 0.85rem; 
             color: var(--text-light); 
             border-top: 1px solid rgba(26, 47, 35, 0.1);
+        }
+        footer p { 
+            max-width: 100%; 
+            margin: 0 auto 1rem auto; 
         }
         footer a { margin: 0 15px; color: var(--pine); }
 
