--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@
 </div>
 
 <nav class="main-nav">
-    <a href="index.html">Home</a>
-    <a href="https://tmacmastermind.com/tee-room.html" class="active-link">Blog</a>
+    <a href="index.html" class="active-link">Home</a>
+    <a href="about.html">About</a>
+    <a href="https://tmacmastermind.com/tee-room.html">Blog</a>
     <a href="mailto:support@tmacinspired.com">Contact</a>
 </nav>
 
