Update meta description and hero statement text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TMac Inspired™ | You Can Have It All</title>
     <link rel="icon" type="image/png" href="tmac-logo.png">
-    <meta name="description" content="TMac Inspired helps nurses pivot from bedside burnout into business ownership through luxury consulting and mindset mastery.">
+    <meta name="description" content="You aren’t failing at nursing — you’ve outgrown the bedside. Take the Nurse Pivot Plan Assessment to get your Departure Score and a clear exit strategy toward ownership.">
     <style>
         /* --- RESET & VARIABLES --- */
         :root {
@@ -142,7 +142,7 @@
 </nav>
 
 <header class="hero container reveal">
-    <h1 class="hero-statement">You can have it all.<br>TMac Inspired™ shows you how.</h1>
+    <h1 class="hero-statement">You aren’t failing at nursing.<br>You’ve outgrown the bedside, and your expertise is ready for business.</h1>
 </header>
 
 <main class="container">
@@ -154,8 +154,8 @@
             <div class="content-wrapper">
                 <h3>The Entry Point</h3>
                 <h2>Nurse Pivot Plan Assessment</h2>
-                <p>Are you just tired, or are you ready for ownership? Take the free 2-minute assessment to discover your path out of burnout.</p>
-                <a href="nurse_pivot_embed.html" class="btn">Take the Assessment</a>
+                <p>Stop normalizing the back pain, the missed holidays, and the guilt of cutting corners on patient care. The Nurse Pivot Plan will show you how to start calling the shots. Take the 2-minute assessment to get your Departure Score and a clear path toward ownership.</p>
+                <a href="nurse_pivot_embed.html" class="btn">Get My Departure Score</a>
             </div>
         </section>
 
@@ -178,8 +178,8 @@
             <div class="content-wrapper">
                 <h3>The Acceleration</h3>
                 <h2>Slay Your Shift</h2>
-                <p>The live, 5-day execution experience for nurses ready to swap burnout for a profitable business they love. Join the next shift February 23-27, 2026.</p>
-                <a href="slay-your-shift.html" class="btn">Join the Shift</a>
+                <p>You’ve survived the shift. Now, Slay Your Shift. A live, 5-day execution experience to turn your experience into income — and build a paycheck that reflects your value. February 23-27, 2026.</p>
+                <a href="slay-your-shift.html" class="btn">Execute My Exit Plan</a>
             </div>
         </section>
 
