Update event description and call-to-action text

--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A 5-day execution experience for nurses ready to swap burnout for business. Join TMac Inspired™ to build a profitable life you love.">
+    <meta name="description" content="A live 5-day execution experience for nurses ready to stop normalizing burnout and start building income outside the bedside.">
     <title>Slay Your Shift | TMac Inspired™</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="tmac-logo.png">
@@ -436,12 +436,12 @@ footer {
     </header>
 
     <section class="hero">
-        <h2>A 5-Day Masterclass Experience</h2>
+        <h2>A 5-Day Live Execution Experience</h2>
         <h1>Slay Your Shift</h1>
-        <p>For the nurse ready to pivot from the bedside to the boardroom. Build your legacy, not just your schedule.</p>
+        <p>For the nurse who is done normalizing exhaustion and ready to build income outside the bedside. You will leave with a clear offer, a simple system, and a plan you can execute.</p>
 
         <a href="https://buy.stripe.com/fZu28qbkkgId89e48G1sQ0i" class="btn" target="_blank" rel="noopener">
-  Join the Shift
+  Execute My Exit Plan
 </a>
 
     <div class="hero-image-wrap">
@@ -481,47 +481,47 @@ footer {
             <h2 class="section-title">Is This For You?</h2>
             <div class="avatar-grid">
                 <div class="avatar-box">
-                    <p><strong>The Burnout is Real:</strong> You've spent years "slaying the shift," but you're tired of trading your life for a paycheck that has a fixed ceiling.</p>
+                    <p><strong>The burnout is not your personality:</strong> You can do hard things. You are just tired of trading your life for a paycheck with a fixed ceiling.</p>
                 </div>
                 <div class="avatar-box">
-                    <p><strong>The Ambition is Greater:</strong> You know your clinical expertise is worth more. You're ready to package your knowledge into a high-value business.</p>
+                    <p><strong>Your expertise is underpaid:</strong> You have years of real-world skill that belongs in a business that pays you for outcomes, not hours.</p>
                 </div>
             </div>
-            <p style="text-align: center; margin-top: 5rem; font-size: 1.4rem; font-style: italic; color: var(--pine);">This experience is for the nurse ready to transition from employee to owner.</p>
+            <p style="text-align: center; margin-top: 5rem; font-size: 1.4rem; font-style: italic; color: var(--pine);">This experience is for the nurse ready to move from employee to owner with a simple plan and clean execution.</p>
         </div>
     </section>
 
     <section class="container">
-        <h2 class="section-title">5 Days. Proven Results.</h2>
+        <h2 class="section-title">5 Days. Real Execution.</h2>
         
         <div class="day-item">
             <span class="day-label">Day 1</span>
             <div class="day-title">Clarity</div>
-            <p>Define your unique value and business vision. We uncover the profitable ideas already hidden in your license.</p>
+            <p>Decide what you sell and who you help. We turn your experience into a clean, profitable direction you can commit to.</p>
         </div>
 
         <div class="day-item">
             <span class="day-label">Day 2</span>
             <div class="day-title">Framework</div>
-            <p>Shift from the "Employee Mindset" to the "Business Mindset." We’ll build your proprietary Signature Framework that turns your expertise into a repeatable, high-value process that works even when you aren't on the clock.</p>
+            <p>Build your Signature Framework: the step-by-step method that makes your offer valuable and repeatable. This is how you stop selling your time and start selling outcomes.</p>
         </div>
 
         <div class="day-item">
             <span class="day-label">Day 3</span>
             <div class="day-title">Audience</div>
-            <p>Identify and attract your ideal clients without needing a massive social media following.</p>
+            <p>Identify the people who already need you and learn how to reach them with simple messaging that converts without a huge social media presence.</p>
         </div>
 
         <div class="day-item">
             <span class="day-label">Day 4</span>
             <div class="day-title">Systems</div>
-            <p>Set up simple, elegant systems that scale. No tech-overwhelm, just tools that buy back your time.</p>
+            <p>Set up simple, elegant systems. No tech spiral. Just the minimum tools that buy back your time.</p>
         </div>
 
         <div class="day-item">
             <span class="day-label">Day 5</span>
             <div class="day-title">Launch</div>
-            <p>Execute your revenue-generating action. The shift from "learning" to "doing" starts here.</p>
+            <p>Execute a real revenue move. You leave with a plan you can run on your schedule and repeat until your exit becomes inevitable.</p>
         </div>
     </section>
 
@@ -540,7 +540,7 @@ footer {
 </section>
 
         <a href="https://buy.stripe.com/fZu28qbkkgId89e48G1sQ0i" class="btn" target="_blank" rel="noopener">
-  Join the Shift
+  Execute My Exit Plan
 </a>
 
     <section class="container">
@@ -553,17 +553,17 @@ footer {
                     <span class="accordion-icon">+</span>
                 </button>
                 <div class="accordion-content">
-                    <p>We know nurse life doesn't follow a 9-to-5. All sessions are recorded and uploaded to a private portal by the next morning so you can catch up whenever your shift ends.</p>
+                    <p>Nurse schedules are real life. Sessions are recorded and uploaded to a private portal by the next morning so you can catch up when your shift ends.</p>
                 </div>
             </div>
 
             <div class="accordion-item">
                 <button class="accordion-header">
-                    I’m exhausted. Is this just “more work” on my plate?
+                    I’m exhausted. Is this just more work on my plate?
                     <span class="accordion-icon">+</span>
                 </button>
                 <div class="accordion-content">
-                    <p>This isn't another "resilience training" from HR. This is your exit strategy. We spend one hour a night focusing on high-impact moves that actually lead to buying back your time.</p>
+                    <p>This is not a motivation talk. This is an exit plan. One focused hour a night, high-impact actions, and a structure you can repeat without burning out.</p>
                 </div>
             </div>
 
@@ -573,17 +573,17 @@ footer {
                     <span class="accordion-icon">+</span>
                 </button>
                 <div class="accordion-content">
-                    <p>Absolutely not. Most nurses come in knowing they want "out" but aren't sure where to go. Day 1 is dedicated to Clarity: uncovering the profitable business ideas already hidden in your experience.</p>
+                    <p>No. Most nurses know they want out but cannot name the best path. Day 1 is built to pull the right offer out of your experience and align it with an income lane.</p>
                 </div>
             </div>
 
             <div class="accordion-item">
                 <button class="accordion-header">
-                    Can I really replace my nursing income?
+                    Can I replace my nursing income?
                     <span class="accordion-icon">+</span>
                 </button>
                 <div class="accordion-content">
-                    <p>We aren't promising "overnight millions," but we are teaching you the Profit Foundations used by nurses who have successfully transitioned to consulting and coaching.</p>
+                    <p>We are building profit foundations and execution habits. Your results will match your consistency. Many nurses use this exact structure to grow consulting, coaching, and service offers outside the bedside.</p>
                 </div>
             </div>
         </div>
@@ -592,10 +592,10 @@ footer {
     <section class="container">
         <h2 class="section-title">What's Included</h2>
         <ul class="included-list">
-            <li>5 Daily Live Execution Sessions <span class="value">Value $497</span></li>
-            <li>Business Mastery Workbook <span class="value">Value $97</span></li>
+            <li>5 Live Execution Sessions <span class="value">Value $497</span></li>
+            <li>Slay Your Shift Workbook <span class="value">Value $97</span></li>
             <li>Private Community Access <span class="value">Value $197</span></li>
-            <li>Build Your Signature Digital Asset <span class="value">Value $697</span></li>
+            <li>Signature Offer and Digital Asset Build <span class="value">Value $697</span></li>
             <li style="font-weight: bold; border-top: 2px solid var(--pine); padding-top: 30px; margin-top: 10px;">TOTAL VALUE <span>$1,488</span></li>
         </ul>
 
@@ -603,7 +603,7 @@ footer {
             <p class="price-label">Your Investment Today</p>
             <div class="price">$147</div>
             <a href="https://buy.stripe.com/fZu28qbkkgId89e48G1sQ0i" class="btn" target="_blank" rel="noopener">
-  Join the Shift
+  Execute My Exit Plan
 </a>
 
         </div>
@@ -632,7 +632,7 @@ footer {
             });
         });
 
-        const targetDate = new Date("February 23, 2026 19:00:00").getTime();
+        const targetDate = new Date("February 23, 2026 20:30:00").getTime();
         const updateTimer = () => {
             const now = new Date().getTime();
             const difference = targetDate - now;
