Update logo and script URL in landing page

--- a/slay-your-shift-landing-page.html
+++ b/slay-your-shift-landing-page.html
@@ -293,7 +293,7 @@
 
     <header>
         <!-- Replace YOUR_LOGO_LINK with your actual logo URL -->
-        <img src="YOUR_LOGO_LINK" alt="TMac Inspired" class="logo">
+        <img src="https://www.tmacinspired.com/tmac-logo.png" alt="TMac Inspired" class="logo">
         <p class="kicker">A Guide For The Ready Nurse</p>
         <h1>Stop Waiting for a "Doctor's Order" to Start Your Life.</h1>
         <p class="sub-headline">Whether you've been at the bedside for 5 years or 25, it's time to use your clinical brain to build your own bridge.</p>
@@ -355,7 +355,7 @@
 
     <script>
         // Replace with your actual Google Apps Script Web App URL
-        const SCRIPT_URL = 'YOUR_APPS_SCRIPT_URL_HERE';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyQXLWG-kzKBLa7KLg7_L5k14XfGM497n415ONuS3u8txmdLs88eyL6s9cD2AC156CyCg/exec';
 
         const form = document.getElementById('optinForm');
         const messageDiv = document.getElementById('message');
